# hwtHls

./: .coveragerc  .coveralls.yml  .gitignore  .project  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.dev.md  README.md  meson.build  pyproject.toml  setup.py
hwtHls/: .gitignore  __init__.py  clk_math.py  code.py  codeObjs.py  codeOps.py  errors.py  hls.py  hlsPipeline.py  hwIOMeta.py  hwtNetlistToHwtHlsNetlist.py  meson.build  preservedAnalysisSet.py  scope.py  syncNodes.py  thread.py  tmpVariable.py  types.py  typingFuture.py
hwtHls/allocator/: allocator.py  architecturalElement.py  connectionsOfStage.py  fsmContainer.py  interArchElementNodeSharingAnalysis.py  pipelineContainer.py  time_independent_rtl_resource.py
hwtHls/architecture/: __init__.py  allocator.py  allocatorUtils.py  archElement.py  archElementFsm.py  archElementPipeline.py  architecturalElement.py  connectionsOfStage.py  fsmContainer.py  interArchElementHandshakeSync.py  interArchElementNodeSharingAnalysis.py  pipelineContainer.py  syncUtils.py  timeIndependentRtlResource.py
hwtHls/architecture/analysis/: channelGraph.py  fsmStateEncoding.py  handshakeSCCs.py  hlsAndRtlNetlistAnalysisPass.py  hlsArchAnalysisPass.py  nodeParentSyncNode.py  syncNodeFlushing.py  syncNodeGraph.py  syncNodeStalling.py
hwtHls/architecture/transformation/: addImplicitSyncChannels.py  addRtlSigNames.py  addSyncSigNames.py  archElementsToSubunits.py  archStructureSimplify.py  channelHandshakeCycleBreak.py  channelHandshakeCycleBreakDynamicLinkUtils.py  channelHandshakeCycleBreakLocalIoUtils.py  channelHandshakeCycleBreakUtils.py  channelMerge.py  channelReduceSyncStrength.py  channelReduceUselessValid.py  controlChannelSimplify.py  controlLogicMinimize.py  dce.py  disolveHlsNetNodeLoopStatus.py  fsmStateNextWriteConstruction.py  hlsAndRtlNetlistPass.py  hlsArchPass.py  ioPortPrivatization.py  loopControlLowering.py  loopControlPrivatization.py  mergeTiedFsms.py  moveArchElementPortsToMinimizeSync.py  operatorToHwtLowering.py  rehash.py  rtlArchPass.py  rtlNetlistPass.py  simplify.py  singleStagePipelineToFsm.py  syncLowering.py  syncPredicatePruning.py
hwtHls/architecture/translation/: dumpArchDot.py  dumpHsSCCsDot.py  dumpStreamNodes.py  toGraphwiz.py  toTimeline.py
hwtHls/examples/: alapAsapDiffExample.py  bitonicSort.py  crc.py  hls_expr_tree3.py  mac.py  memCrc.py  pid.py  trivial.py  trivial_test.py  twoTimesA.py  while_if.py  while_if_test.py  write_true.py
hwtHls/examples/hlsStreamProc/: trivial.py  trivial_test.py  while_if.py  write_true.py
hwtHls/examples/query/: extractMacOps.py  rtlNetlistManipulator.py  selectFF.py
hwtHls/frontend/: hardBlock.py  netlist.py  utils.py
hwtHls/frontend/ast/: __init__.py  astToSsa.py  builder.py  debugCodeSerializer.py  memorySSAUpdater.py  statements.py  statementsIo.py  statementsRead.py  statementsWrite.py  thread.py  utils.py
hwtHls/frontend/pyBytecode/: __init__.py  addressedIo.py  blockLabel.py  blockPredecessorTracker.py  bytecodeBlockAnalysis.py  errorUtils.py  frame.py  fromPython.py  fromPythonLowLevel.py  fromPythonLowLevelOpcodes.py  fromPythonPragma.py  hwIterator.py  hwrange.py  indexExpansion.py  instructions.py  ioProxyAddressed.py  ioProxyStream.py  loopMeta.py  loopsDetect.py  markers.py  pragma.py  pragmaFunction.py  pragmaInstruction.py  pragmaLoop.py  pragmaPreproc.py  thread.py  utils.py
hwtHls/hlsStreamProc/: __init__.py  _streamProc.py  debugCodeSerializer.py  exprBuilder.py  statements.py  statementsIo.py  streamProc.py  thread.py
hwtHls/hlsStreamProc/ssa/: __init__.py  basicBlock.py  branchControlLabel.py  instr.py  phi.py  value.py
hwtHls/io/: bram.py  portGroups.py
hwtHls/io/amba/: axi4Lite.py
hwtHls/io/axiStream/: proxy.py  stmWrite.py
hwtHls/llvm/: README.md  __init__.py  bitMath.cpp  bitMath.h  fromLlvm.py  hashUtils.h  llvmCompilationBundle.cpp  llvmCompilationBundle.h  llvmCompilationBundleORE.cpp  llvmCompilationBundleORE.h  llvmCompilationBundleTests.cpp  llvmHwtHlsInstrumentation.cpp  llvmHwtHlsInstrumentation.h  llvmIr.cpp  llvmIrAny.cpp  llvmIrAny.h  llvmIrBuilder.cpp  llvmIrBuilder.h  llvmIrCommon.h  llvmIrFunction.cpp  llvmIrFunction.h  llvmIrGlobalVariable.cpp  llvmIrGlobalVariable.h  llvmIrInstruction.cpp  llvmIrInstruction.h  llvmIrLoop.cpp  llvmIrLoop.h  llvmIrMachineFunction.cpp  llvmIrMachineFunction.h  llvmIrMachineLoop.cpp  llvmIrMachineLoop.h  llvmIrMetadata.cpp  llvmIrMetadata.h  llvmIrStrings.cpp  llvmIrStrings.h  llvmIrValues.cpp  llvmIrValues.h  llvmMeta.py  llvmPasses.cpp  llvmPasses.h  (+4 more)
hwtHls/llvm/ADT/: bimap.h
hwtHls/llvm/Transforms/: HFloatTmpLoweringPass.cpp  HFloatTmpLoweringPass.h  IcmpToOnlyEqLtLe.cpp  IcmpToOnlyEqLtLe.h  LoopAddLatchPass.cpp  (+33 more)
hwtHls/myHdlSynthesizer/: __init__.py  unitMyHdl.py
hwtHls/netlist/: __init__.py  builder.py  clusterSearch.py  codeOps.py  codeOpsPorts.py  context.py  debugTracer.py  dumpStreamNodes.py  hdlTypeVoid.py  observableList.py  toGraphwiz.py  toTimeline.py  typeUtils.py  utils.py
hwtHls/platform/: debug.py  debugBundle.py  fileUtils.py  interpolations.py  opRealizationMeta.py  platform.py  virtual.py
hwtHls/query/: rtlNetlist.py  rtlNetlistManipulator.py
hwtHls/samples/: Ap_hsReadWrite.py  Ap_hsReadWrite_withCond.py  all_tests.py  axiStreamReg.py  bitonicSort.py  connection.py  counter.py  example0.py  example1.py  mac.py  pid.py  pidController.py  vivadoHLSUnit.py
hwtHls/scheduler/: __init__.py  alap.py  asap.py  force_directed.py  list_schedueling.py  list_schedueling_test.py  scheduler.py
hwtHls/ssa/: __init__.py  analysisCache.py  basicBlock.py  branchControlLabel.py  codeLocation.py  context.py  exprBuilder.py  instr.py  phi.py  value.py
hwtHls/streamLvl/: ops.py  valObj.py
hwtHls/tests/: alapAsapDiffExample.py  all.py  baseSsaTest.py  bitonicSort.py  connection.py  crc.py  expr_tree3.py  hls_expr_tree3.py  ifstm.py  list_schedueling_test.py  mac.py  pid.py  read_if.py  slicing.py  streamLvl.py  syntehesis_checks.py  trivial.py  trivial_test.py  twoTimesA.py  while_if.py  while_if_test.py  write_true.py
hwtHls/vivadoHLS/: unit.py
(+1335 files in other folders)
