# https://meson-python.readthedocs.io/en/stable/usage/start.html

[build-system]
requires = [
   "wheel",
   "meson>=0.63.0",
   'meson-python',
   "pybind11>=2.8.1",
   "ninja",
]
build-backend = 'mesonpy'


[project]
name = 'hwtHls'
dynamic = [
  'version',
]
description = 'A library for automated translation of an algorithmic description to hardware architectures.'
readme="README.md"
license = { file = 'LICENSE' }
keyword = ['fpga', 'compiler', 'hls', 'llvm', 'vhdl', 'verification', 'verilog', 'systemverilog']
authors = [
  { name = 'Michal Orsak', email = 'Nic30original@gmail.com' },
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
        "Topic :: System :: Hardware",
        "Topic :: System :: Emulators",
        "Topic :: Utilities"
]
requires-python = '>=3.10'
dependencies  = [
   'hwtLib>=2.9', # primitive hardware components
   'scipy>=1.5.2', # interpolations and other complex math
   'networkx', # graph algorithms
   'plotly', # debug timeline graphs
   'pydot', # debug graphwiz graphs
]

[project.urls]
homepage = 'https://github.com/Nic30/hwtHls'
repository = 'https://github.com/Nic30/hwtHls'


