generated_llvm_backend_files = [
	['HwtFpgaGenGlobalISel.inc', ['-gen-global-isel', ]],
	['HwtFpgaGenInstrInfo.inc', ['-gen-instr-info', ]],
	['HwtFpgaGenRegisterInfo.inc', ['-gen-register-info', ]],
	['HwtFpgaGenSubtargetInfo.inc', ['-gen-subtarget', ]],
	['HwtFpgaGenPreLegalizerGICombiner.inc', ['-gen-global-isel-combiner', '-combiners=HwtFpgaPreLegalizerGICombiner']],
	['HwtFpgaGenPreRegAllocGICombiner.inc', ['-gen-global-isel-combiner', '-combiners=HwtFpgaPreRegAllocGICombiner']],
	['HwtFpgaGenPreToNetlistGICombiner.inc', ['-gen-global-isel-combiner', '-combiners=HwtFpgaPreToNetlistGICombiner']],
]

all_llvm_backend_gen_files = []
foreach f : generated_llvm_backend_files
	gen_src = custom_target(f[0],
	                        input : ['targets/HwtFpgaInstrInfo.td',
	                        		 'targets/HwtFpgaInstrInfoFP.td',
	                        		 'targets/HwtFpgaInstrInfoPyObjectPlaceholder.td',
	                        		 'targets/HwtFpgaRegisterInfo.td',
	                                 'targets/HwtFpgaCombine.td', 'targets/HwtFpga.td',
	                                 'targets/HwtFpgaSchedModel.td'],
	                        output : [f[0], ],
	                        command : [llvm_tblgen,
	                        	'-I', llvm_includedir,
	                            '-I', meson.current_source_dir() + '/targets/',
	                        	meson.current_source_dir() + '/targets/HwtFpga.td'] + f[1] + ['-o=@OUTPUT0@', ])
    all_llvm_backend_gen_files += gen_src
endforeach

llmvIr_extraDefs = []
if not llvm_is_debug_build
	llmvIr_extraDefs += ['-DLLVM_NDEBUG=1']
endif

py3.extension_module(
    'llvmIr',
    [
     'bitMath.cpp',
     'llvmCompilationBundle.cpp',
     'llvmCompilationBundleORE.cpp',
     'llvmPyCompilationBundle.cpp',
     'llvmCompilationBundleTests.cpp',
     'llvmHwtHlsInstrumentation.cpp',
     'llvmIr.cpp',
     'llvmIrAny.cpp',
     'llvmIrBuilder.cpp',
     'llvmIrFunction.cpp',
     'llvmIrGlobalVariable.cpp',
     'llvmIrInstruction.cpp',
     'llvmIrLoop.cpp',
     'llvmIrMachineFunction.cpp',
     'llvmIrMachineLoop.cpp',
     'llvmIrMetadata.cpp',
     'llvmIrStrings.cpp',
     'llvmIrValues.cpp',

     'llvmSrc/CodeGenPrepare.cpp',
     'llvmSrc/BranchFolding.cpp',
     'targets/Analysis/liveVariableForEdge.cpp',
     'targets/Analysis/VRegLiveins.cpp',
     'targets/Analysis/registerBitWidth.cpp',

     'targets/intrinsic/bitrange.cpp',
     'targets/intrinsic/concatMemberVector.cpp',
     'targets/intrinsic/hfloattmp.cpp',
     'targets/intrinsic/pyObjectPlaceholder.cpp',
     'targets/intrinsic/utils.cpp',
     'targets/intrinsic/streamIo.cpp',

	 'targets/GISel/hwtFpgaCallLoweringInfo.cpp',
	 'targets/GISel/hwtFpgaInstructionSelector.cpp',
	 'targets/GISel/hwtFpgaInstructionSelectorUtils.cpp',
	 'targets/GISel/hwtFpgaIRTranslator.cpp',
	 'targets/GISel/hwtFpgaLegalizerInfo.cpp',
	 'targets/GISel/hwtFpgaPreLegalizerCombiner.cpp',
	 'targets/GISel/hwtFpgaPreRegAllocCombiner.cpp',
	 'targets/GISel/hwtFpgaPreToNetlistCombiner.cpp',
     'targets/GISel/hwtFpgaRegisterBankInfo.cpp',
     'targets/GISel/hwtFpgaCombinerHelper.cpp',
     'targets/GISel/hwtFpgaCombinerHelperCopy.cpp',
     'targets/GISel/hwtFpgaCombinerHelperExtract.cpp',
     'targets/GISel/hwtFpgaCombinerHelperMux.cpp',
     'targets/GISel/hwtFpgaCombinerHelperMuxSinkDirectlyDrivenValBits.cpp',
     'targets/GISel/hwtFpgaCombinerHelperMuxValPropagation.cpp',
     'targets/GISel/hwtFpgaInstructionBuilderUtils.cpp',

	 'targets/hwtFpgaInstrInfo.cpp',
	 'targets/hwtFpgaIoUtils.cpp',
	 'targets/hwtFpgaMCTargetDesc.cpp',
     'targets/hwtFpgaTargetInfo.cpp',
     'targets/hwtFpgaRegisterInfo.cpp',
	 'targets/hwtFpgaTargetLowering.cpp',
     'targets/hwtFpgaTargetSubtarget.cpp',
	 'targets/hwtFpgaTargetMachine.cpp',
     'targets/hwtFpgaTargetTransformInfo.cpp',
     'targets/hwtFpgaTargetPassConfig.cpp',
     'targets/machineInstrUtils.cpp',
     
     'targets/Transforms/utils/machineDceWorklist.cpp',
     'targets/Transforms/cheapBlockInlinePass.cpp',
     'targets/Transforms/completeLiveVRegs.cpp',
     'targets/Transforms/EarlyMachineCopyPropagation.cpp',
     'targets/Transforms/hwtFpgaToNetlist.cpp',
     'targets/Transforms/hwtHlsCodeGenPrepare.cpp',
     'targets/Transforms/HwtHlsRunPassInstrumentationCallbacksPass.cpp',
     'targets/Transforms/liveVRegs.cpp',
     'targets/Transforms/machineDumpAndExitPass.cpp',
     'targets/Transforms/RemovePointerArithmeticPass.cpp',
     'targets/Transforms/vregConditionUtils.cpp',
     'targets/Transforms/vregIfConversion.cpp',
     'targets/Transforms/vregIfConversionDebugUtils.cpp',
     'targets/Transforms/vregIfConversionForkedTriangle.cpp',
     'targets/Transforms/vregIfConversionLoopTail.cpp',
     'targets/Transforms/vregIfConversionNormalizeBranchCondition.cpp',
     'targets/Transforms/vregIfConversionReturnBlockMerge.cpp',
     'targets/Transforms/vregMachineLateInstrsCleanup.cpp',
     'targets/Transforms/writeCFGToDotFile.cpp',

     'Transforms/bitwidthReducePass/bitPartsUseAnalysis.cpp',
     'Transforms/bitwidthReducePass/bitRewriter.cpp',
     'Transforms/bitwidthReducePass/bitwidthReducePass.cpp',
     'Transforms/bitwidthReducePass/constBitPartsAnalysis.cpp',
     'Transforms/bitwidthReducePass/phiValueProover.cpp',
     'Transforms/bitwidthReducePass/utils.cpp',
     'Transforms/SelectPruningPass.cpp',
     'Transforms/StripProfMetadataPass.cpp',
     'Transforms/slicesToIndependentVariablesPass/detectSplitPoints.cpp',
     'Transforms/slicesToIndependentVariablesPass/slicesToIndependentVariablesPass.cpp',
     'Transforms/extractBitConcatAndSliceOpsPass.cpp',
     'Transforms/HFloatTmpLoweringPass.cpp',
     'Transforms/IcmpToOnlyEqLtLe.cpp',
     'Transforms/LoopAddLatchPass.cpp',
     'Transforms/LoopFlattenUsingIfPass.cpp',
     'Transforms/LoopUnrotatePass.cpp',
     'Transforms/overwriteBlockNamesPass.cpp',
     'Transforms/PruneLoopPhiDeadIncomingValuesPass/PruneLoopPhiDeadIncomingValuesPass.cpp',
     'Transforms/PruneLoopPhiDeadIncomingValuesPass/KnownValue.cpp',
     'Transforms/ReconfigureHwtFpgaTTIPass.cpp',
     'Transforms/RomExtractPass.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass_aggresiveStoreSink.cpp',
	 'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass_mergePredecessorsStore.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass_normalizeLookupTableIndex.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass_rewriteMaskPatternsFromCFGToData.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass_SwitchLikeCmpToSwitch.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass_SwitchSuccessorHoistCode.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass_SwitchToSelect.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFG2Pass.cpp',
     'Transforms/SimplifyCFG2Pass/SimplifyCFGUtils.cpp',
     'Transforms/trivialSimplifyCFGPass.cpp',
     'Transforms/slicesMerge/rewritePhiShift.cpp',
     'Transforms/slicesMerge/rewriteConcat.cpp',
     'Transforms/slicesMerge/slicesMerge.cpp',
     'Transforms/slicesMerge/mergeConsequentSlices.cpp',
     'Transforms/slicesMerge/mergeConsequentSlicesBinOp.cpp',
     'Transforms/slicesMerge/mergeConsequentSlicesSelect.cpp',
     'Transforms/slicesMerge/parallelInstrVec.cpp',
     'Transforms/utils/bitSliceFlattening.cpp',
     'Transforms/utils/dceWorklist.cpp',
     'Transforms/utils/inLoopConditionalExecution.cpp',
     'Transforms/utils/irConsistencyChecks.cpp',
     'Transforms/utils/loopMerging.cpp',
     'Transforms/utils/writeCFGToDotFile.cpp',
     'Transforms/utils/loopHwtHlsMetadata.cpp',
     'Transforms/streamIoLoweringPass/streamIoCfgDetector.cpp',
     'Transforms/streamIoLoweringPass/streamIoInstrCollector.cpp',
     'Transforms/streamIoLoweringPass/streamReadLoweringPass.cpp',
     'Transforms/streamIoLoweringPass/streamWriteEoFHoister.cpp',
     'Transforms/streamIoLoweringPass/streamWriteLoweringPass.cpp',
     'Transforms/streamIoLoweringPass/streamIoRewriter.cpp',
     'Transforms/streamLoopUnrollPass/streamLoopUnrollPass.cpp',
     ] + all_llvm_backend_gen_files,
    dependencies : [py3_dep, llvm_dep, pybind11_dep],
    install: true,
    cpp_args: ['-Wno-comment', '-Wno-non-virtual-dtor'] + llmvIr_extraDefs, # because of LLVM
    subdir: 'hwtHls/llvm',
    include_directories : hwtHls_inc,
)

